[gd_scene load_steps=2 format=3 uid="uid://c5lrmniarrm3o"]

[ext_resource type="Script" path="res://CanvasLayer.gd" id="1_hig12"]

[node name="diemenu" type="CanvasLayer"]
script = ExtResource("1_hig12")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -374.0
offset_top = -213.0
offset_right = -219.0
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5.21156, 5.36324)
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Deathtext" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Ты Конченый Даун"

[node name="respawn" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "respawn"

[node name="gotomenu" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "menu"

[node name="WaitTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/respawn" to="." method="_on_respawn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/gotomenu" to="." method="_on_gotomenu_pressed"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_wait_timer_timeout"]
